[Fixes #1743] Full upgrade of Pax Web 8 to Pax Web 9 with Jetty 10 - all tests pass on JDK11+