@@ -240,7 +240,7 @@ public class PaxWebServletInfo extends ServletInfo {
 					}
 				} else if (model.getServletClass() != null) {
 					try {
-						instance = model.getServletClass().newInstance();
+						instance = model.getServletClass().getConstructor().newInstance();
 					} catch (Exception e) {
 						InstantiationException instantiationException = new InstantiationException(e.getMessage());
 						instantiationException.initCause(e);
